--- a/viz_and_eda_ii.Rmd
+++ b/viz_and_eda_ii.Rmd
@@ -108,4 +108,39 @@ weather_df %>%
     name="Location",
     discrete=TRUE)
 ```
+## Themes
+
+Shift the legend
+```{r}
+weather_df %>% 
+  ggplot(aes(x=tmin, y=tmax, color= name)) + 
+  geom_point(alpha= .5) +
+  labs(
+    title="temperature plot",
+    x="Min Daily Temperature (C)",
+    y="Max Daily Temperature (C)",
+    caption="Data from rnoaa package"
+  )+
+  viridis::scale_color_viridis(
+    name="Location",
+    discrete=TRUE)+
+  theme(legend.position= "bottom")
+```
+Shift overall theme
+
+```{r}
+weather_df %>% 
+  ggplot(aes(x=tmin, y=tmax, color= name)) + 
+  geom_point(alpha= .5) +
+  labs(
+    title="temperature plot",
+    x="Min Daily Temperature (C)",
+    y="Max Daily Temperature (C)",
+    caption="Data from rnoaa package"
+  )+
+  viridis::scale_color_viridis(
+    name="Location",
+    discrete=TRUE)+
+  theme_minimal()
+```
 
