settings from now on

--- a/viz_and_eda_ii.Rmd
+++ b/viz_and_eda_ii.Rmd
@@ -141,6 +141,27 @@ weather_df %>%
   viridis::scale_color_viridis(
     name="Location",
     discrete=TRUE)+
-  theme_minimal()
+  theme_minimal()+
+  theme(legend.position="bottom")
+```
+## Setting options
+
+```{r, eval=FALSE}
+library(tidyverse)
+
+knitr::opts_chunk$set(
+  fig.width=6,
+  fig.asp= .6,
+  out.width= "90%"
+)
+theme_set(theme_minimal()+theme(legend.position="bottom"))
+
+options(
+  ggplot2.continuous.color="viridis",
+  ggplot2.continuous.fill= "viridis"
+)
+
+scale_color_discrete= scale_color_viridis_d
+scale_fill_discrete= scale_color_viridis_d
 ```
 
