data args into geoms

--- a/viz_and_eda_ii.Rmd
+++ b/viz_and_eda_ii.Rmd
@@ -165,3 +165,19 @@ scale_color_discrete= scale_color_viridis_d
 scale_fill_discrete= scale_color_viridis_d
 ```
 
+##Data args in `geom`
+
+```{r}
+central_park=
+  weather_df %>% 
+  filter(name=="CentralPark_NY")
+
+waikiki=
+  weather_df %>% 
+  filter(name=="Waikiki_HA")
+
+ggplot(data=waikiki, aes(x= date, y=tmax, color=name))+
+  geom_point()+
+  geom_line(data=central_park)
+```
+
