--- a/viz_and_eda_ii.Rmd
+++ b/viz_and_eda_ii.Rmd
@@ -208,3 +208,32 @@ tmax_date_p=
 tmax_tmin_p+tmax_date_p
 ```
 
+## Data Manipulation
+
+Control your factors
+
+```{r}
+ weather_df %>% 
+  mutate(
+    name=factor(name),
+    name=forcats::fct_relevel(name, c("Waikiki_HA"))
+  ) %>% 
+  ggplot(aes(x=name, y=tmax, fill=name))+
+  geom_violin(alpha=.5)
+```
+What if I wanted densities for tmin and tmax simul?
+
+```{r}
+weather_df %>% 
+  filter(name=="CentralPark_NY") %>% 
+  pivot_longer(
+    tmax:tmin,
+    names_to="observation",
+    values_to="temperatures"
+    
+  ) %>% 
+  ggplot(aes(x=temperatures, fill=observation)+
+           geom_density(alpha=0.5)+
+            facet_grid(.~ name)
+```
+
