--- a/exploratory_analysis.Rmd
+++ b/exploratory_analysis.Rmd
@@ -51,4 +51,67 @@ weather_df =
 weather_df %>% 
   group_by(name,month)
 ```
+## counting things
+
+count month/name observations
+```{r}
+weather_df %>% 
+  group_by(name,month) %>% 
+  summarize(n_obs=n())
+```
+we can use `count`
+
+```{r}
+weather_df %>% 
+  count(name, month, name="n_obs")
+```
+**NEVER** use base R's `table`
+
+```{r, eval=FALSE}
+weather_df %>% 
+  pull(month) %>% 
+  table()
+```
+
+other helpful counters
+
+```{r}
+
+weather_df %>% 
+  group_by(month) %>% 
+  summarize(
+    n_obs=n(),
+    n_days=n_distinct(date))
+  
+```
+## A digression on 2x2 tables
+
+```{r}
+
+weather_df %>% 
+  filter(name !="Waikiki_HA") %>% 
+  mutate(
+    cold= case_when(
+      tmax< 5 ~ "cold",
+      tmax >= 5 ~ "not_cold",
+      TRUE ~ ""
+      
+    ) 
+  )%>% 
+      group_by(name,cold) %>% 
+      summarize(count=n())
+```
+```{r}
+weather_df %>% 
+  filter(name !="Waikiki_HA") %>% 
+  mutate(
+    cold= case_when(
+      tmax< 5 ~ "cold",
+      tmax >= 5 ~ "not_cold",
+      TRUE ~ ""
+      
+    ) 
+  )%>% 
+  janitor:: tabyl(name,cold)
+```
 
