--- a/exploratory_analysis.Rmd
+++ b/exploratory_analysis.Rmd
@@ -115,3 +115,52 @@ weather_df %>%
   janitor:: tabyl(name,cold)
 ```
 
+##General summaries
+
+YOu can lots of summaries
+
+```{r}
+weather_df %>% 
+  group_by(name,month) %>% 
+  summarize(
+    mean_tmax=mean(tmax, na.rm=TRUE),
+    mean_prcp=mean(prcp, na.rm=TRUE),
+    median_tmin=median(tmin, na.rm=TRUE)
+  )
+```
+
+THis is a dataframe! So we can make a plot
+
+```{r}
+weather_df %>% 
+  group_by(name,month) %>% 
+  summarize(
+    mean_tmax=mean(tmax, na.rm=TRUE),
+    mean_prcp=mean(prcp, na.rm=TRUE),
+    median_tmin=median(tmin, na.rm=TRUE)
+  ) %>% 
+  ggplot(aes(x=month, y=mean_tmax, color=name))+
+  geom_point()+
+  geom_line()
+```
+Suppose you want to summarize many colmns
+
+```{r}
+weather_df %>% 
+  group_by(name, month) %>% 
+  summarize(across(prcp:tmin, mean))
+```
+
+Reminder: sometimes your results are easier to read in another format
+
+```{r}
+weather_df %>% 
+  group_by(name, month) %>% 
+  summarize(mean_tmax=mean(tmax)) %>% 
+  pivot_wider(
+    names_from=name,
+    values_from=mean_tmax
+  ) %>% 
+  knitr::kable(digits=1)
+```
+
